crates/cyrus-core/tests/ui/fail/neg_macro_positive.stderr
error[E0080]: evaluation panicked: f64_neg! requires finite negative value
 --> tests/ui/fail/neg_macro_positive.rs:9:14
  |
9 |     let _x = f64_neg!(1.0);
  |              ^^^^^^^^^^^^^ evaluation of `main::_` failed here
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `f64_neg` (in Nightly builds, run with -Z macro-backtrace for more info)
